--- a/Portfolio/task/src/index.html
+++ b/Portfolio/task/src/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Hello, World!</title>
+    <title>Sergey Shilovskiy. Portfolio</title>
 </head>
 <body>
 <header>
 <nav>
-    <a href="#about">About me</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contacts">Contacts</a>
+    <a href="#about" class="nav">About me</a>
+    <a href="#portfolio" class="nav">Portfolio</a>
+    <a href="#contacts" class="nav">Contacts</a>
+    <a href="/" class="home-link">Home</a>
 </nav>
-    <h1>Sergey Shilovskiy, Fullstack developer</h1>
+    <h1>Sergey Shilovskiy,<br>Fullstack developer</h1>
 </header>
 <section id="about">
     <h2>About me</h2>
@@ -36,5 +37,6 @@
 <footer>
     Sergey Shilovskiy, 2021
 </footer>
+<link href="main.css" rel="stylesheet">
 </body>
 </html>
